<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/pokeCardViewStyle"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            android:hint="@string/email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:hint="@string/password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView

            style="@style/pokeContainerCardViewStyle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/pokeButtonStyle"
                android:text="@string/register"/>

        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:layout_margin="5dp"
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:visibility="gone"
        />

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>